third_party/WebKit/Source/core/dom/Node.h
@@ -915,6 +915,8 @@ class CORE_EXPORT Node : public EventTarget {
     kCreateDocument = kCreateContainer | kIsConnectedFlag,
     kCreateV0InsertionPoint = kCreateHTMLElement | kIsV0InsertionPointFlag,
     kCreateEditingText = kCreateText | kHasNameOrIsEditingTextFlag,
+    kCreatePseudoElement = kDefaultNodeFlags | kIsContainerFlag |
+                           kIsElementFlag | kNeedsReattachLayoutTree,
   };
 
   Node(TreeScope*, ConstructionType);
